<resources>
    <string name="app_name">Demo Android Apps</string>

    //Shipping Calculator strings
    <string name="btnShipping">Shipping Calculator</string>
    <string name="lblWeight">Enter parcel weight</string>
    <string name="lblOunces">(in ounces)</string>
    <string name="lblBaseCost">Base Cost:</string>
    <string name="lblAddedCost">Added Cost:</string>
    <string name="lblTotalCost">Total Shipping Cost:</string>
    <string name="zeroDec">$0.00</string>
    <string name="zero">0</string>

    //Updated Shipping Calculator
    <string name="updatedShippingApp">Updated Shipping Calculator</string>

    //Burger activity strings
    <string name="btnBurger">Calorie Counter</string>
    <string name="second_app_name">Burger Calorie Counter</string>
    <string name="one">Beef Patty</string>
    <string name="two">Veggie Patty</string>
    <string name="three">Chickpea Patty</string>

    <string name="prosciutto">Prosciutto</string>
    <string name="asiago">Asiago Cheese</string>
    <string name="creme">Creme Fraiche</string>

    <string name="sauce">Caviar sauce up to one teaspoon:</string>
    <string name="calories">Calories?</string>
    <string name="imgBun">Bun</string>

    //Calculator activity strings
    <string name="calcApp">Calculator</string>
    <string name="digitOne">1</string>
    <string name="digitTwo">2</string>
    <string name="digitThree">3</string>
    <string name="digitFour">4</string>
    <string name="digitFive">5</string>
    <string name="digitSix">6</string>
    <string name="digitSeven">7</string>
    <string name="digitEight">8</string>
    <string name="digitNine">9</string>
    <string name="digitZero">0</string>
    
    <string name="ac">AC</string>
    <string name="sign">+/-</string>
    <string name="percent">%</string>
    <string name="div">/</string>
    <string name="mult">*</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="equal">=</string>
    <string name="decimal">.</string>

    //renaissance paintings app
    <string name="paintApp">Renaissance Paintings</string>

    //personnel app
    <string name="personnelApp">Personnel Directory</string>
    <string name="id">Personnel ID</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="position">Position</string>
    <string name="supervisor">Supervisor</string>
    <string name="role">Role</string>
    <string name="birthdate">Birthdate</string>
    <string name="age">Age</string>
    <string name="married">Married</string>
    <string-array name="married_array">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="role_array">
        <item>Staff</item>
        <item>Supervisor</item>
    </string-array>
    <string name="prev">Previous</string>
    <string name="next">Next</string>

    //passing data
    <string name="passingData">Passing Data</string>
    <string name="message">Hello!</string>
    <string name="click">Click Me</string>

    //paint calculator
    <string name="paintCalc">Paint Calculator</string>
    <string name="instructions">Enter the dimensions of the room in feet.</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="howMany">How many doors and windows?</string>
    <string name="doors">Doors</string>
    <string name="windows">Windows</string>
    <string name="compute">Compute Gallons</string>
    <string name="help">Help</string>
    <string name="area">Interior surface area:</string>
    <string name="paint">Gallons of paint needed:</string>
    //paint help
    <string name="helpText"> This paint job calculator computes the approximate number of gallons
        needed to paint a single coat covering four walls and the ceiling of an interior room. \n\n
        If you wish to apply multiple coars, multiply the number of compuyted gallons by the number
        of coats needed. You must provide the dimensions of the room as well as the number of doors
        and windows. \n\n The input for the dimensions of the room will be the length, width, and
        height of the room. In addition, you must also provide the number of doors and windows in
        the room; their area will not be included in the surface area to be painted. \n\n This
        calculator assumes a door is a standard measurement of 7 x 3 feet and a window is a standard
        measurement of 4 x 4 feet. \n\n A gallon of paint will cover approximately 275 square feet.</string>
    <string name="btnReturn">Input Room Dimensions</string>

</resources>
