<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnShipping"
        android:id="@+id/btnShipping"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:onClick="shippingScreen" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBurger"
        android:id="@+id/btnCalorie"
        android:layout_below="@+id/btnShipping"
        android:layout_centerHorizontal="true"
        android:onClick="calorieScreen"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcApp"
        android:id="@+id/btnCalculator"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/btnCalorie"
        android:onClick="calculatorScreen" />

    <Button
        android:text="@string/paintApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnPaintApp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/btnCalculator"
        android:onClick="paintingScreen"/>

    <Button
        android:text="@string/personnelApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnPersonnel"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/btnPaintApp"
        android:onClick="personnelScreen"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passingData"
        android:id="@+id/btnPassingData"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paintCalc"
        android:id="@+id/btnPaintCalc"
        android:layout_gravity="center_horizontal"
        android:onClick="paintCalculatorScreen"/>

    <Button
        android:text="@string/updatedShippingApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btnUpdatedShipping"
        android:onClick="updatedShippingScreen" />

</LinearLayout>