<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:stretchColumns="0,1,2,3">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_span="4"
            android:background="@color/orange_cream"
            android:gravity="right"
            android:textSize="70dp"
            android:text="@string/zero"/>



    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <Button
           android:id="@+id/btnAC"
           android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_span="2"
            android:background="@color/dusk_blue"
            android:contentDescription="@string/ac"
            android:text="@string/ac"
            android:minHeight="70dip"
            android:onClick="goAC"/>

        <Button
            android:id="@+id/btnPercent"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/percent"
            android:text="@string/percent"
            android:minHeight="70dip"
            android:onClick="goOperator"/>

        <Button
            android:id="@+id/btnDiv"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/div"
            android:text="@string/div"
            android:minHeight="70dip"
            android:onClick="goOperator"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <Button
            android:id="@+id/btnSeven"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/digitSeven"
            android:text="@string/digitSeven"
            android:minHeight="70dip"
            android:onClick="goOperand"/>

        <Button
            android:id="@+id/btnEight"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/digitEight"
            android:text="@string/digitEight"
            android:minHeight="70dip"
            android:onClick="goOperand"/>

        <Button
            android:id="@+id/btnNine"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/digitNine"
            android:text="@string/digitNine"
            android:minHeight="70dip"
            android:onClick="goOperand"/>

        <Button
            android:id="@+id/btnMultiply"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/mult"
            android:text="@string/mult"
            android:minHeight="70dip"
            android:onClick="goOperator"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <Button
            android:id="@+id/btnFour"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/digitFour"
            android:text="@string/digitFour"
            android:minHeight="70dip"
            android:onClick="goOperand"/>

        <Button
            android:id="@+id/btnFive"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/digitFive"
            android:text="@string/digitFive"
            android:minHeight="70dip"
            android:onClick="goOperand"/>

        <Button
            android:id="@+id/btnSix"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/digitSix"
            android:text="@string/digitSix"
            android:minHeight="70dip"
            android:onClick="goOperand"/>

        <Button
            android:id="@+id/btnSubtract"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/subtract"
            android:text="@string/subtract"
            android:minHeight="70dip"
            android:onClick="goOperator"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <Button
            android:id="@+id/btnOne"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/digitOne"
            android:text="@string/digitOne"
            android:minHeight="70dip"
            android:onClick="goOperand"/>

        <Button
            android:id="@+id/btnTwo"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/digitTwo"
            android:text="@string/digitTwo"
            android:minHeight="70dip"
            android:onClick="goOperand"/>

        <Button
            android:id="@+id/btnThree"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/digitThree"
            android:text="@string/digitThree"
            android:minHeight="70dip"
            android:onClick="goOperand"/>

        <Button
            android:id="@+id/btnAdd"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/add"
            android:text="@string/add"
            android:minHeight="70dip"
            android:onClick="goOperator"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/btnZero"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_span="2"
            android:contentDescription="@string/digitZero"
            android:text="@string/digitZero"
            android:minHeight="70dip"
            android:onClick="goOperand"/>

        <Button
            android:id="@+id/btnEqual"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_span="2"
            android:background="@color/dusk_blue"
            android:contentDescription="@string/equal"
            android:text="@string/equal"
            android:minHeight="70dip"
            android:onClick="goCompute"/>


    </TableRow>

</TableLayout>