<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/burgerbackground">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivTopBun"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/topbun" />

    <RadioGroup
        android:id="@+id/rgPatty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivTopBun"
        android:layout_centerHorizontal="true">
        <RadioButton
            android:id="@+id/rbOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/rbTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"/>
        <RadioButton
            android:id="@+id/rbThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three"/>
    </RadioGroup>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prosciutto"
        android:id="@+id/cbProsciutto"
        android:layout_below="@+id/rgPatty"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:id="@+id/rgCheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbProsciutto"
        android:layout_centerHorizontal="true">
        <RadioButton
            android:id="@+id/rgCone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asiago"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/rgCtwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creme"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sauce"
        android:id="@+id/tvSauce"
        android:layout_below="@+id/rgCheese"
        android:layout_centerHorizontal="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sbSauce"
        android:layout_below="@+id/tvSauce"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@+id/sbSauce"
        android:layout_centerHorizontal="true"
        android:src="@drawable/bottombun" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories"
        android:id="@+id/tvCalories"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

</RelativeLayout>