<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/personnelbkg"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:stretchColumns="0,1,2,3">

    <TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:text="Personnel Info"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_span="2"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp"
            android:id="@+id/textView" />

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_height="30dp"
            android:layout_width="wrap_content"
            android:layout_span="2"
            android:src="@drawable/user"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/id"
            android:textSize="12sp"
            android:id="@+id/tvId"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="12sp"
            android:layout_span="3"
            android:id="@+id/etId" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/name"
            android:textSize="12sp"
            android:id="@+id/tvName"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="12sp"
            android:layout_span="3"
            android:id="@+id/etName" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="12sp"
            android:id="@+id/tvAddress"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:layout_span="3"
            android:textSize="12sp"
            android:id="@+id/etAddress" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="12sp"
        android:id="@+id/tvPhone"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_span="3"
        android:textSize="12sp"
        android:id="@+id/etPhone" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="12sp"
        android:id="@+id/tvEmail"/>

        <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:inputType="textEmailAddress"
        android:layout_span="3"
        android:id="@+id/etEmail" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthdate"
            android:textSize="12sp"
            android:id="@+id/tvBirthdate"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_span="3"
            android:textSize="12sp"
            android:id="@+id/etBirthdate" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="12sp"
            android:id="@+id/tvAge"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:textSize="12sp"
            android:id="@+id/tvAgeNumber"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/married"
            android:textSize="12sp"
            android:id="@+id/tvMarried"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spnMarried"
            android:textSize="12sp"/>

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/position"
            android:textSize="12sp"
            android:id="@+id/tvPosition"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:textSize="12sp"
            android:id="@+id/etPosition"/>

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/role"
            android:textSize="12sp"
            android:id="@+id/tvRole"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spnRole"
            android:textSize="12sp"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supervisor"
            android:textSize="12sp"
            android:id="@+id/tvSupervisor"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_span="3"
            android:textSize="12sp"
            android:id="@+id/etSupervisor" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btnPrev"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@color/orange_cream"
            android:text="@string/prev"
            android:onClick="previousRecord"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_span="2"
            android:background="@color/dusk_blue"
            android:text="@string/next"
            android:onClick="nextRecord"
            android:layout_gravity="center_horizontal"/>
    </TableRow>
</TableLayout>