<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvWeight2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/lblWeight"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <EditText
        android:id="@+id/etWeight2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textSize="35sp"
        android:ems="10"
        android:hint="@string/zero">
        <requestFocus/>
    </EditText>
    <TextView
        android:id="@+id/tvOunces2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/lblOunces"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

</LinearLayout>