<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.braun1792.shippingcalculator.MainActivity"
    android:background="@drawable/shippingbck">

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/lblWeight"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <EditText
        android:id="@+id/etWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvWeight"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textSize="35sp"
        android:ems="10"
        android:hint="@string/zero">
        <requestFocus/>
    </EditText>
    <TextView
        android:id="@+id/tvOunces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etWeight"
        android:layout_centerHorizontal="true"
        android:text="@string/lblOunces"
        android:textAppearance="?android:attr/textAppearanceSmall"/>
    <TextView
        android:id="@+id/tvBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tvOunces"
        android:layout_marginTop="40dp"
        android:paddingLeft="@dimen/output_margin_buffer"
        android:text="@string/lblBaseCost"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/tvBaseCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tvBase"
        android:layout_alignBottom="@id/tvBase"
        android:text="@string/zeroDec"
        android:layout_alignParentRight="true"
        android:paddingRight="@dimen/output_margin_buffer"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/tvAdded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tvBase"
        android:paddingTop="10dp"
        android:text="@string/lblAddedCost"
        android:paddingLeft="@dimen/output_margin_buffer"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/tvAddedCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tvAdded"
        android:layout_alignBottom="@id/tvAdded"
        android:text="@string/zeroDec"
        android:layout_alignParentRight="true"
        android:paddingRight="@dimen/output_margin_buffer"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tvAdded"
        android:paddingTop="10dp"
        android:text="@string/lblTotalCost"
        android:paddingLeft="@dimen/output_margin_buffer"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/tvTotalCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tvTotal"
        android:layout_alignBottom="@id/tvTotal"
        android:text="@string/zeroDec"
        android:layout_alignParentRight="true"
        android:paddingRight="@dimen/output_margin_buffer"
        android:textAppearance="?android:attr/textAppearanceMedium"/>


</RelativeLayout>
